<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>eu.wauz</groupId>
	<artifactId>WauzCore</artifactId>
	<version>Behelit.11-SNAPSHOT</version>


	<properties>
		<java.version>11</java.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>


	<distributionManagement>

		<repository>
			<id>packagecloud</id>
			<url>packagecloud+https://packagecloud.io/Wauzmons/WauzCore</url>
		</repository>

		<snapshotRepository>
			<id>packagecloud</id>
			<url>packagecloud+https://packagecloud.io/Wauzmons/WauzCore</url>
		</snapshotRepository>

	</distributionManagement>


	<repositories>

		<!-- Bukkit -->
		<repository>
			<id>bukkit-repo</id>
			<url>http://repo.bukkit.org/content/groups/public/</url>
		</repository>

		<!-- Spigot -->
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>

		<!-- Paper -->
		<repository>
			<id>papermc</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>

		<!-- MythicMobsAPI -->
		<repository>
			<id>lumine-repo</id>
			<url>http://mvn.lumine.io/repository/maven-snapshots/</url>
		</repository>

		<!-- NoteBlockAPI -->
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>

		<!-- NPCLib -->
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</repository>

		<!-- Discord -->
		<repository>
			<id>jcenter</id>
			<url>https://jcenter.bintray.com</url>
		</repository>

		<!-- Rule 34 -->
		<repository>
			<id>kodehawa</id>
			<url>https://dl.bintray.com/kodehawa/maven</url>
		</repository>

	</repositories>


	<dependencies>

		<dependency>
			<groupId>com.destroystokyo.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.16.5-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.bukkit</groupId>
			<artifactId>craftbukkit</artifactId>
			<version>1.16.5-R0.1-SNAPSHOT</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.bukkit</groupId>
			<artifactId>bukkit</artifactId>
			<version>1.16.5-R0.1-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>io.lumine.xikage</groupId>
			<artifactId>MythicMobs</artifactId>
			<version>4.11.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.koca2000</groupId>
			<artifactId>NoteBlockAPI</artifactId>
			<version>-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>net.jitse</groupId>
			<artifactId>npclib-plugin</artifactId>
			<version>2.11-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.sun.net.httpserver</groupId>
			<artifactId>http</artifactId>
			<version>20070405</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.9.12</version>
		</dependency>


		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>4.2.0_214</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.sedmelluq</groupId>
			<artifactId>lavaplayer</artifactId>
			<version>1.3.34</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>net.kodehawa</groupId>
			<artifactId>imageboard-api</artifactId>
			<version>2.1</version>
		</dependency>


		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.github.seeseemelk</groupId>
			<artifactId>MockBukkit-v1.16</artifactId>
			<version>0.5.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>


	<build>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<finalName>WauzCore</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<classpathDependencyExcludes>
						<classpathDependencyExclude>com.destroystokyo.paper:paper-api</classpathDependencyExclude>
					</classpathDependencyExcludes>
				</configuration>
			</plugin>

		</plugins>

		<extensions>

			<extension>
				<groupId>io.packagecloud.maven.wagon</groupId>
				<artifactId>maven-packagecloud-wagon</artifactId>
				<version>0.0.4</version>
			</extension>

		</extensions>

	</build>

</project>